<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uploadFMCG"
        android:gravity="center"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/gpsAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="17sp"/>
    <TextView
        android:id="@+id/gpsLoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="17sp"/>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:weightSum="3"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imageView1"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>
        <!--android:visibility="gone"-->

        <Button
            android:id="@+id/choseImg1"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="#3552e5"
            android:text="@string/chsImg0"/>
        <!--android:onClick="onClick"-->
        <!--android:enabled="true"-->
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:visibility="gone"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>
        <!--android:visibility="gone"-->

        <Button
            android:id="@+id/choseImg2"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="#3552e5"
            android:text="@string/chsImg2"/>
        <!--android:onClick="onClick"-->
        <!--android:enabled="true"-->
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:visibility="gone"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imageView3"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>
        <!--android:visibility="gone"-->

        <Button
            android:id="@+id/choseImg3"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="#3552e5"
            android:text="@string/chsImg3"/>
        <!--android:onClick="onClick"-->
        <!--android:enabled="true"-->
    </LinearLayout>

    <Button
        android:id="@+id/uploadOGImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload"/>

</LinearLayout>